# py-scaffolding

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  bandit.yaml  main.py  mypy.ini  pre-commit.sh  pyproject.toml  trivy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: codeql-analysis.yml  pr-validation.yaml  release.yaml
docs/: conf.py  index.rst  py-scaffolding.rst
py_scaffolding/: example.py  logging.py  settings.py
src/: __init__.py  __version__.py
src/py_scaffolding/: __init__.py  __version__.py  example.py  logging.py  settings.py
tests/: __init__.py  conftest.py  test_base.py
tests/functional/: test_bdd.py
tests/functional/features/: test.feature
